--- a/client/src/index.css
+++ b/client/src/index.css
@@ -6,7 +6,6 @@
   margin: 0;
 }
 
-
 label {
   font-size: 1.2rem;
   color: #656262;
@@ -18,44 +17,53 @@ body {
   width: 100%;
 }
 
+
 body {
-  background-color: #fff;
+  background-color: #e74d46;
   font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
+
+
 .form_container {
   background-color: #fff;
-  padding: 2rem 3rem;
+  padding: 25rem 3rem; 
   border-radius: 0.5rem;
   width: 100%;
   max-width: 400px;
+  max-height: 400px;
   box-shadow: 8px 8px 24px 0px rgba(66, 68, 90, 1);
 }
+
 
 .form_container > h2 {
   margin-block: 1rem;
   padding-block: 0.6rem;
-  color: rgba(0, 212, 255, 1);
+  color: #84a98c; 
 }
 
 .form_container > form {
   display: flex;
   flex-direction: column;
   gap: 1.4rem;
+  margin-top: 200;
+  
 }
 
 .form_container div {
   display: flex;
   flex-direction: column;
   gap: 0.3rem;
+  
 }
 
 .form_container input {
   border: none;
   padding: 0.5rem;
-  border-bottom: 1px solid gray;
+  border-bottom: 1px solid #354f52; 
   font-size: 1.1rem;
   outline: none;
+  
 }
 
 .form_container input::placeholder {
@@ -64,7 +72,7 @@ body {
 }
 
 .form_container button {
-  background-color: rgba(0, 212, 255, 1);
+  background-color: #2f3e46;
   color: #fff;
   border: none;
   padding: 0.6rem;
@@ -78,33 +86,19 @@ span a {
   color: rgba(0, 212, 255, 1);
 }
 
-.card_container{
+.card_container {
   padding: 2rem;
   padding-left: 4rem;
   padding-right: 4rem;
-
 }
 
-/* .home_page {
-  height: 100vh;
-  width: 100vw;
-  background: #dbdbdb;
-  color: white;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  text-transform: uppercase;
-  font-size: 3rem;
-  flex-direction: column;
-  gap: 1rem;
+.home_page {
+  background-color: #fff 
 }
 
-.home_page span {
-  color: rgba(0, 212, 255, 1);
-} */
 
 .home_page button {
-  background-color: rgb(203, 203, 203);
+  background-color: #354f52; 
   color: #fff;
   cursor: pointer;
   padding: 1rem 3rem;
@@ -112,15 +106,15 @@ span a {
   border-radius: 2rem;
   transition: ease-in 0.3s;
   border: none;
+  
 }
 
 .home_page button:hover {
   background-color: rgba(0, 212, 255, 1);
 }
 
-
-@media only screen and (max-width: 1200px){
-  .home_page{
+@media only screen and (max-width: 1200px) {
+  .home_page {
     font-size: 1.5rem;
   }
   .home_page button {
@@ -128,3 +122,192 @@ span a {
     font-size: 1.5rem;
   }
 }
+.container {
+  max-width: 100%; 
+  margin: 0 auto; 
+  padding: 20px;
+  background-color:#f3ac87;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1); 
+}
+.heading_container {
+  background-color: #7a5243;
+  text-align: center;
+  margin-bottom: 20px; 
+}
+
+.heading_container h2 {
+  font-size: 24px; 
+  margin-bottom: 10px;
+  color:#fff;
+}
+
+.video_container {
+  display: inline-block; 
+  width: 50%; 
+  margin: 0 2.5%;
+  box-sizing: border-box; 
+}
+
+.video_container iframe {
+  width: 100%; 
+  height: 315px;
+}
+
+.footer_columns {
+  display: flex;
+  justify-content: space-between;
+  background-color: #0f5256;
+  padding: 20px;
+  margin-top: 20px;
+  border-top: 1px solid #2f3e46;
+  padding-top: 20px;
+  flex-direction: row; 
+}
+
+.contact_details {
+  flex:1;
+  padding: 20px;
+  color: #fff;
+}
+
+.footer_column {
+  padding: 20px;
+}
+
+.footer_column h3 {
+  color: #fff;
+}
+
+.footer_column p a {
+  color: #fff;
+  text-decoration: none;
+}
+
+.footer_column p a:hover {
+  color: #f3ac87;
+  text-decoration: underline;
+}
+
+.footer_column p {
+  margin-top: 10px;
+}
+
+.footer_icons {
+  display: flex;
+  align-items: center;
+}
+.footer_icons a {
+  color: #666;
+  text-decoration: none;
+  margin-right: 10px;
+}
+
+body {
+  background-image: url('path/to/your/background/image.jpg');
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+}
+
+.soil_container {
+  padding: 20px;
+  margin: auto;
+  max-width: 1000px;
+  background-color: rgba(255, 255, 255, 0.9); 
+  border-radius: 10px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1); 
+  margin-top: 100px; 
+
+}
+
+.soil_container h3 {
+  font-size: 24px;
+  text-align: center;
+  margin-bottom: 20px;
+}
+
+/* Form Elements */
+/* .form-floating {
+  margin-bottom: 20px;
+}
+
+.form-floating input {
+  width: 100%;
+  padding: 10px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  font-size: 16px;
+}
+
+.form-floating input:focus {
+  outline: none;
+  border-color: #25aae1; 
+}
+
+.form-floating label {
+  pointer-events: none; 
+  position: absolute;
+  top: 50%;
+  left: 10px;
+  transform: translateY(-50%);
+  font-size: 16px;
+  color: #333;
+  transition: 0.3s ease-in-out;
+}
+
+.form-floating input:focus + label,
+.form-floating input:not(:placeholder-shown) + label {
+  font-size: 12px;
+  top: 0;
+  transform: translateY(0);
+  color: #25aae1;
+} */
+
+
+.col-md-4 button {
+  width: 100%;
+  padding: 10px;
+  border: none;
+  border-radius: 5px;
+  font-size: 16px;
+  font-weight: 600;
+  color: #fff;
+  cursor: pointer;
+  transition: all .4s ease-in-out;
+}
+
+.col-md-4 button:hover {
+  background-position: 100% 0;
+}
+
+
+  
+  
+  
+
+/* Navbar.css */
+.navbar-brand {
+  font-size: 1.5rem;
+  color: #e74d46; 
+
+}
+
+.navbar-nav .nav-link {
+  color: #0f5256;
+  margin-right: 15px;
+}
+
+.navbar-nav .nav-link:hover {
+  color: #69ba6b;
+}
+
+.btn-outline-transparent {
+  color: #e74d46;
+}
+
+.btn-outline-transparent:hover {
+  color: #0f5256;
+}
+
+
+
