--- a/client/src/index.css
+++ b/client/src/index.css
@@ -6,6 +6,10 @@
   margin: 0;
 }
 
+:root {
+  background-color: #c9d4f8;
+}
+
 label {
   font-size: 1.2rem;
   color: #656262;
@@ -13,13 +17,14 @@ label {
 
 html,
 body {
+  background-color: #5FAD8C;
   height: 100%;
   width: 100%;
 }
 
 
 body {
-  background-color: #e74d46;
+  background-color: #5FAD8C;
   font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
@@ -85,6 +90,10 @@ span a {
   color: rgba(0, 212, 255, 1);
 }
 
+.new_card{
+  padding: 5rem;
+}
+
 .card_container {
   padding: 2rem;
   padding-left: 4rem;
@@ -92,7 +101,7 @@ span a {
 }
 
 .home_page {
-  background-color: #fff 
+  background-color: #c9d4f8 
 }
 
 
@@ -140,82 +149,19 @@ span a {
   color:#fff;
 }
 
-.video_container {
-  display: inline-block; 
-  width: 50%; 
-  margin: 0 2.5%;
-  box-sizing: border-box; 
-}
-
-.video_container iframe {
-  width: 100%; 
-  height: 315px;
-}
-
-.footer_columns {
-  display: flex;
-  justify-content: space-between;
-  background-color: #0f5256;
-  padding: 20px;
-  margin-top: 20px;
-  border-top: 1px solid #2f3e46;
-  padding-top: 20px;
-  flex-direction: row; 
-}
-
-.contact_details {
-  flex:1;
-  padding: 20px;
-  color: #fff;
-}
-
-.footer_column {
-  padding: 20px;
-}
-
-.footer_column h3 {
-  color: #fff;
-}
-
-.footer_column p a {
-  color: #fff;
-  text-decoration: none;
-}
-
-.footer_column p a:hover {
-  color: #f3ac87;
-  text-decoration: underline;
-}
-
-.footer_column p {
-  margin-top: 10px;
-}
-
-.footer_icons {
-  display: flex;
-  align-items: center;
-}
-.footer_icons a {
-  color: #666;
-  text-decoration: none;
-  margin-right: 10px;
-}
-
-body {
-  background-image: url('path/to/your/background/image.jpg');
-  background-size: cover;
-  background-position: center;
-  background-repeat: no-repeat;
+.soil{
+  background-color: #c9d4f8;
+  /* height: 500px; */
 }
 
 .soil_container {
   padding: 20px;
   margin: auto;
-  max-width: 1000px;
-  background-color: rgba(255, 255, 255, 0.9); 
+  /* max-width: 1000px; */
+  background-color: #c9d4f8; 
   border-radius: 10px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1); 
-  margin-top: 100px; 
+  /* margin-top: 100px;  */
 
 }
 
